fix: rename the file to proper format

--- a/assets/css/style__index-products.css
+++ b/assets/css/style__index-products.css
@@ -18,12 +18,13 @@
 }
 
 .products__catalog__select__container {
+    display: flex;
+    gap: 3rem;
     font: var(--paragraph--size);
 }
 
-.products__catalog__select__container {
-    display: flex;
-    gap: 3rem;
+.product__catalog__select {
+    cursor: pointer;
 }
 
 .products__catalog__cards__container {
